# Applied-ML-for-Scientists

./: .gitignore  ECE 7XXX - Syllabus - Winter 2025.docx  README.md  pyproject.toml  test_tokenizer.ipynb
.github/workflows/: code-linter.yml  test-links.yml  test-linux.yml  test-spelling.yml  test-windows.yml
Materials/: quizzes.xlsx
tests/: test_ch0.py
